[tool.poetry]
name = "espn-fantasy-football"
version = "0.1.0"
description = "Script for getting ESPN fantasy football data."
authors = ["Joshua Spratt <jspratt02@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
espn-api = "^0.32.0"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
